manifests/dev/seatunnel/Service-seatunnel-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: seatunnel-http
  namespace: seatunnel
spec:
  ports:
    - port: 5801
      protocol: TCP
      targetPort: 5801
  selector:
    app.kubernetes.io/instance: seatunnel
