manifests/dev/seatunnel/Service-seatunnel-master.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: seatunnel
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: seatunnel-master
    app.kubernetes.io/version: 2.3.10
  name: seatunnel-master
spec:
  clusterIP: None
  ports:
    - name: master-port
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: seatunnel
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: seatunnel-master
    app.kubernetes.io/version: 2.3.10
