manifests/dev/seatunnel/Service-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/expose: "true"
  name: tailscale
  namespace: seatunnel
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5801
  selector:
    app: seatunnel
